Change connection flow from AsyncTask to RxAndroid

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         </activity>
 
         <!-- Connectivity service -->
-        <service android:name=".connectivity.ConnectionService" />
+        <service android:name=".connectivity.async.ConnectionService" />
+        <!-- Connectivity service -->
+        <service android:name=".connectivity.reactive.ConnectionService" />
     </application>
 
 </manifest>
